--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,4 +5,5 @@
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import 'node_modules/bootstrap/scss/bootstrap';
+@import 'node_modules/bootstrap-vue/src/index.scss';
